@@ -10,102 +10,112 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import backend.academy.dto.AddLinkRequest;
+import backend.academy.dto.LinkResponse;
 import backend.academy.dto.ListLinksResponse;
+import backend.academy.scrapper.ScrapperConfig;
+import backend.academy.scrapper.dao.ChatDao;
+import backend.academy.scrapper.dao.FilterDao;
+import backend.academy.scrapper.dao.LinkDao;
+import backend.academy.scrapper.dao.TagDao;
 import backend.academy.scrapper.exc.ChatAlreadyExistsException;
 import backend.academy.scrapper.exc.ChatNotFoundException;
-import backend.academy.scrapper.exc.LinkAlreadyExistsException;
 import backend.academy.scrapper.exc.LinkNotFoundException;
-import backend.academy.scrapper.model.Chat;
-import backend.academy.scrapper.model.Link;
-import backend.academy.scrapper.model.LinkInfo;
-import backend.academy.scrapper.repository.ChatRepository;
-import backend.academy.scrapper.repository.LinkRepository;
+import backend.academy.scrapper.model.dto.Link;
 import backend.academy.scrapper.service.ChatService;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 class ChatServiceTest {
-    private final Long chatId = 1L;
-    private final String linkUrl = "http://example.com";
-    private final Long linkId = 100L;
+    @Mock
+    private ChatDao chatDao;
 
     @Mock
-    private ChatRepository chatRepository;
+    private LinkDao linkDao;
 
     @Mock
-    private LinkRepository linkRepository;
+    private TagDao tagDao;
+
+    @Mock
+    private FilterDao filterDao;
+
+    @Spy
+    private ScrapperConfig config = new ScrapperConfig("token", null, 10, "SQL");
 
     @InjectMocks
     private ChatService chatService;
 
-    private Chat chat;
+    private final Long chatId = 1L;
+    private final String linkUrl = "http://example.com";
+    private final Long linkId = 100L;
     private Link link;
-    private LinkInfo linkInfo;
+    private LinkResponse linkResponse;
 
     @BeforeEach
     void setUp() {
         link = new Link(linkId, linkUrl, null);
-        linkInfo = new LinkInfo(linkId, Collections.emptyList(), Collections.emptyList());
-        chat = new Chat(chatId, new ArrayList<>(List.of(linkInfo)));
+        linkResponse = new LinkResponse(linkId, linkUrl, List.of("tag"), List.of("filter"));
     }
 
     @Test
     void registerChat_ShouldRegisterChat_WhenChatDoesNotExist() {
-        when(chatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         chatService.registerChat(chatId);
 
-        verify(chatRepository, times(1)).addChat(any(Chat.class));
+        verify(chatDao, times(1)).addChat(chatId);
     }
 
     @Test
     void registerChat_ShouldThrowException_WhenChatAlreadyExists() {
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
 
         assertThatThrownBy(() -> chatService.registerChat(chatId)).isInstanceOf(ChatAlreadyExistsException.class);
 
-        verify(chatRepository, never()).addChat(any(Chat.class));
+        verify(chatDao, never()).addChat(any(Long.class));
     }
 
     @Test
     void deleteChat_ShouldDeleteChat_WhenChatExists() {
-        when(chatRepository.removeChat(chatId)).thenReturn(true);
+        when(chatDao.removeChat(chatId)).thenReturn(true);
 
         chatService.deleteChat(chatId);
 
-        verify(chatRepository, times(1)).removeChat(chatId);
+        verify(chatDao, times(1)).removeChat(chatId);
     }
 
     @Test
     void deleteChat_ShouldThrowException_WhenChatDoesNotExist() {
-        when(chatRepository.removeChat(chatId)).thenReturn(false);
+        when(chatDao.removeChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.deleteChat(chatId)).isInstanceOf(ChatNotFoundException.class);
     }
 
     @Test
-    void getAllLinksFromChat_ShouldReturnLinks_WhenChatExists() {
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
-        when(linkRepository.getLink(linkId)).thenReturn(link);
+    void getAllLinksFromChat_ShouldReturnLinks_AsBatchStream_WhenChatExists() {
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.findLinksByChatId(chatId)).thenReturn(List.of(linkId));
+        when(linkDao.getLinkUrlById(linkId)).thenReturn(linkUrl);
+        when(filterDao.getFiltersByChatIdAndLinkId(chatId, linkId)).thenReturn(linkResponse.filters());
+        when(tagDao.getAllTagsByChatIdAndLinkId(chatId, linkId)).thenReturn(linkResponse.tags());
 
         ListLinksResponse response = chatService.getAllLinksFromChat(chatId);
 
-        assertThat(1).isEqualTo(response.size());
-        assertThat(1).isEqualTo(response.links().size());
-        assertThat(linkUrl).isEqualTo(response.links().getFirst().url());
+        assertThat(response.size()).isEqualTo(1);
+        assertThat(response.links()).containsExactly(linkResponse);
     }
 
     @Test
-    void getAllLinksFromChat_ShouldThrowException_WhenChatNotFound() {
-        when(chatRepository.getChat(chatId)).thenReturn(null);
+    void getAllLinksAsBatchStreamFromChat_ShouldThrowException_WhenChatNotFound() {
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.getAllLinksFromChat(chatId)).isInstanceOf(ChatNotFoundException.class);
     }
@@ -113,30 +123,36 @@ class ChatServiceTest {
     @Test
     void addLinkToChat_ShouldAddLink_WhenNewLink() {
         Link newLink = new Link(101L, "https://new_example.com", null);
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
-        when(linkRepository.getLinkByUrl(newLink.url())).thenReturn(null);
-        when(linkRepository.addLink(newLink.url())).thenReturn(newLink);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(newLink.url())).thenReturn(null);
+        when(linkDao.addLink(newLink.url())).thenReturn(newLink.id());
 
         chatService.addLinkToChat(
                 chatId, new AddLinkRequest(newLink.url(), Collections.emptyList(), Collections.emptyList()));
 
-        verify(chatRepository, times(1)).updateChat(eq(chatId), any(Chat.class));
+        verify(tagDao, never()).addTag(any(Long.class), any(Long.class), any(String.class));
+        verify(filterDao, never()).addFilter(any(Long.class), any(Long.class), any(String.class));
+        verify(linkDao, times(1)).addLinkToChat(eq(chatId), eq(newLink.id()));
     }
 
     @Test
-    void addLinkToChat_ShouldThrowException_WhenLinkAlreadyExists() {
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
-        when(linkRepository.getLinkByUrl(linkUrl)).thenReturn(link);
+    void addLinkToChat_ShouldAddLink_WhenLinkAlreadyExists() {
+        Link newLink = new Link(101L, "https://new_example.com", null);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(newLink.url())).thenReturn(newLink.id());
 
-        assertThatThrownBy(() -> chatService.addLinkToChat(
-                        chatId, new AddLinkRequest(linkUrl, Collections.emptyList(), Collections.emptyList())))
-                .isInstanceOf(LinkAlreadyExistsException.class)
-                .hasMessageContaining(chatId.toString(), linkUrl);
+        chatService.addLinkToChat(
+                chatId, new AddLinkRequest(newLink.url(), Collections.emptyList(), Collections.emptyList()));
+
+        verify(linkDao, never()).addLink(any(String.class));
+        verify(tagDao, never()).addTag(any(Long.class), any(Long.class), any(String.class));
+        verify(filterDao, never()).addFilter(any(Long.class), any(Long.class), any(String.class));
+        verify(linkDao, times(1)).addLinkToChat(eq(chatId), eq(newLink.id()));
     }
 
     @Test
     void addLinkToChat_ShouldThrowException_WhenChatNotFound() {
-        when(chatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.addLinkToChat(
                         chatId, new AddLinkRequest(linkUrl, Collections.emptyList(), Collections.emptyList())))
@@ -145,18 +161,20 @@ class ChatServiceTest {
 
     @Test
     void deleteLinkFromChat_ShouldDeleteLink_WhenLinkExists() {
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
-        when(linkRepository.getLinkByUrl(linkUrl)).thenReturn(link);
-        when(chatRepository.removeLinkFromChatById(chatId, linkId)).thenReturn(true);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(linkUrl)).thenReturn(linkId);
+        when(linkDao.removeLinkFromChatById(chatId, linkId)).thenReturn(true);
 
         chatService.deleteLinkFromChat(chatId, link.url());
 
-        verify(chatRepository, times(1)).removeLinkFromChatById(chatId, linkId);
+        verify(linkDao, times(1)).removeLinkFromChatById(chatId, linkId);
+        verify(tagDao, times(1)).removeAllTagsFromChatByLinkId(chatId, linkId);
+        verify(filterDao, times(1)).removeAllFiltersFromChatByLinkId(chatId, linkId);
     }
 
     @Test
     void deleteLinkFromChat_ShouldThrowException_WhenChatDoesNotExist() {
-        when(chatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.deleteLinkFromChat(chatId, linkUrl))
                 .isInstanceOf(ChatNotFoundException.class);
@@ -164,8 +182,8 @@ class ChatServiceTest {
 
     @Test
     void deleteLinkFromChat_ShouldThrowException_WhenLinkDoesNotExist() {
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
-        when(linkRepository.getLinkByUrl(linkUrl)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(linkUrl)).thenReturn(null);
 
         assertThatThrownBy(() -> chatService.deleteLinkFromChat(chatId, linkUrl))
                 .isInstanceOf(LinkNotFoundException.class);
@@ -173,9 +191,9 @@ class ChatServiceTest {
 
     @Test
     void deleteLinkFromChat_ShouldThrowException_WhenLinkNotInChat() {
-        when(chatRepository.getChat(chatId)).thenReturn(chat);
-        when(linkRepository.getLinkByUrl(linkUrl)).thenReturn(link);
-        when(chatRepository.removeLinkFromChatById(chatId, linkId)).thenReturn(false);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(linkUrl)).thenReturn(linkId);
+        when(linkDao.removeLinkFromChatById(chatId, linkId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.deleteLinkFromChat(chatId, linkUrl))
                 .isInstanceOf(LinkNotFoundException.class)
@@ -183,18 +201,21 @@ class ChatServiceTest {
     }
 
     @Test
-    void getAllLinks() {
+    void getAllLinksAsBatchStream() {
+        int pageSize = config.pageSize();
         List<Link> expectedLinks = List.of(link);
-        when(linkRepository.getAllLinks()).thenReturn(expectedLinks);
+        when(linkDao.getLinksPage(0, pageSize)).thenReturn(expectedLinks);
+        when(linkDao.getLinksPage(1, pageSize)).thenReturn(Collections.emptyList());
 
-        List<Link> links = chatService.getAllLinks();
+        List<Link> links =
+                chatService.getAllLinksAsBatchStream().flatMap(List::stream).collect(Collectors.toList());
 
-        assertThat(expectedLinks).isEqualTo(links);
+        assertThat(links).isEqualTo(expectedLinks);
     }
 
     @Test
     void updateLinkLastModified_ShouldThrowException_WhenLinkDoesNotExist() {
-        when(linkRepository.getLink(linkId)).thenReturn(null);
+        when(linkDao.getLinkUrlById(linkId)).thenReturn(null);
 
         assertThatThrownBy(() -> chatService.updateLinkLastModifiedAt(linkId, null))
                 .isInstanceOf(LinkNotFoundException.class);
